--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -13,9 +13,8 @@ body {
 .header {
     padding: 10px 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #252e33;
+    background-color: #2d3436;
 }
-
 .header h1 {
   font-size: 48px;
   display: inline-block;
@@ -84,22 +83,22 @@ p {
   width: 20%;
   height: 100%;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #2589bd;
+  background-color: #b2bec3;
 }
 
 .preview-lead {
   margin-bottom: 32px;
-  color: #ffffff;
+  color: #111111;
 }
 
 .preview-brand {
   margin-bottom: 32px;
-  color: #ffffff;
+  color: #111111;
 }
 
 .preview-cost {
   margin-bottom: 32px;
-  color: #ffffff;
+  color: #111111;
 }
 
 .preview-lead h3 {
@@ -141,8 +140,8 @@ p {
   padding: 50px;
   height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #92bb00;
-  color: #ffffff;
+  background-color: #b2bec3;
+  color: #111111;
 }
 
 .work {
@@ -150,8 +149,8 @@ p {
   padding: 50px;
   height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
+  background-color: #b2bec3;
+  color: #111111;
 }
 
 
@@ -160,8 +159,8 @@ p {
   padding: 50px;
   height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
+  background-color: #b2bec3;
+  color: #111111;
 }
 
 .contact-information {
@@ -169,9 +168,10 @@ p {
   padding: 50px;
   height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
+  background-color: #b2bec3;
+  color: #111111;
 }
+
 
 /* Here is the search-engine-optimization image class */
 .search-engine-optimization img {
@@ -206,7 +206,7 @@ p {
 
 /* the footer codes start here */
 .footer {
-    background: #ecfbfe;
+    background: #dfe6e9;
     width: 100%;
     padding: 30px;
     clear: both;
@@ -216,17 +216,24 @@ p {
 .footer h2 {
   display: inline;
   color: #024e76;
-  font-size: 30px;
+  font-size: 20px;
   margin: 0;
 }
 
 footer a {
-    color: #024e76;
+    color: #dfe6e9;
+}
+
+.footer h3 p {
+  color: #5b5b5b;
+  text-align: left;
+  line-height: 2.5;
 }
   
 footer div {
+    font-style: normal;
     float: right;
-    line-height: 1.5;
+    line-height: 2.5;
     text-align: right;
 }
   
