--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -206,22 +206,37 @@ p {
 
 /* the footer codes start here */
 .footer {
-    background: #dfe6e9;
+    background: #636e72;
     width: 100%;
     padding: 30px;
     clear: both;
     text-align: right;
 }
 
+.footer .social-networking {
+  text-align: center;
+  line-height: 2.5;
+  float: right;
+}
+
+
 .footer h2 {
   display: inline;
   color: #024e76;
   font-size: 20px;
+  line-height: 2.5;
   margin: 0;
+}
+
+footer h2 p {
+  color: #5b5b5b;
+  text-align: left;
+  line-height: 2.5;
 }
 
 footer a {
     color: #dfe6e9;
+    line-height: 2.5;
 }
 
 .footer h3 p {
@@ -229,11 +244,14 @@ footer a {
   text-align: left;
   line-height: 2.5;
 }
-  
+
 footer div {
     font-style: normal;
     float: right;
     line-height: 2.5;
     text-align: right;
 }
+
+
+
   
