--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -245,6 +245,9 @@ p {
 
 /* the footer codes start here */
 .footer {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
     background: #636e72;
     width: 100%;
     padding: 30px;
@@ -255,12 +258,10 @@ p {
 .footer .social-networking {
   text-align: right;
   line-height: 2.5;
-  float: right;
 }
 
 
 .footer h2 {
-  display: inline;
   color: #024e76;
   font-size: 20px;
   line-height: 2.5;
@@ -287,7 +288,6 @@ footer h2 p {
 
 .footer div {
     font-style: normal;
-    float: right;
     line-height: 2.0;
     text-align: right;
 }
