--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -67,6 +67,9 @@ p {
 
 /* Hero Image scetion */
 .hero-image {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/hero-bg.jpg");
   height: 600px;
   margin-bottom: 10px;
@@ -85,7 +88,20 @@ p {
 }
 /* Hero Image scetion Ends */
 
+.hero-cta {
+  width: 35%;
+  text-align: right;
+  margin: 3.5%;
+  color: #fff;
+  font-size: 18px;
+  line-height: 1.3;
+}
 
+.hero-cta h2 {
+  font-style: italic;
+  font-size: 55px;
+  color: #fce138;
+}
 
 /* Here is the float-left class */
 .float-left {
@@ -168,42 +184,58 @@ p {
 
 /* Portfolio scetion */
 .portfolio {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 10px;
   padding: 50px;
   height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #2d3436;
   color: #dfe6e9;
+  justify-content: center;
+}
+
+.flex-row {
+  display: flex;
 }
 
 /* Portfolio scetion */
 .work {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 10px;
   padding: 50px;
   height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #2d3436;
+  justify-content: center;
   color: #dfe6e9;
 }
 
 /* Portfolio scetion */
 .resume {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
   margin-bottom: 10px;
   padding: 50px;
-  height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #2d3436;
   color: #dfe6e9;
+  justify-content: center;
 }
 
 /* About me scetion */
 .about-me {
+  display: flex;
+  flex-wrap: wrap;
   margin-bottom: 10px;
   padding: 50px;
-  height: 300px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  align-items: left;
   background-color: #2d3436;
   color: #dfe6e9;
+  justify-content: center;
 }
 
 
