--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -96,7 +96,7 @@ p {
   clear: both;
   float: right;
   width: 21%;
-  height: 1360px;
+  height: 1459px;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #2d3436;
 }
@@ -132,16 +132,23 @@ p {
   text-align: center;
 }
 
+/* Preview images */
 .preview-1 img {
   display: block;
   margin: 10px auto;
   max-width: 200px;
+}
+.preview-1 img:hover {
+  opacity: 0.7;
 }
 
 .preview-2 img {
   display: block;
   margin: 10px auto;
   max-width: 200px;
+}
+.preview-2 img:hover {
+  opacity: 0.7;
 }
 
 .preview-3 img {
@@ -150,11 +157,15 @@ p {
   max-width: 200px;
 }
 
+.preview-3 img:hover {
+  opacity: 0.7;
+}
+
 /* Portfolio scetion */
 .portfolio {
   margin-bottom: 20px;
   padding: 50px;
-  height: 300px;
+  height: 400px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #2d3436;
   color: #dfe6e9;
@@ -171,7 +182,7 @@ p {
 }
 
 /* Portfolio scetion */
-.resume {
+.contact-me {
   margin-bottom: 20px;
   padding: 50px;
   height: 300px;
@@ -196,13 +207,25 @@ p {
   max-height: 200px;
 }
 
+.search-engine-optimization img:hover {
+  opacity: 0.7;
+}
+
 .online-reputation-management img {
   max-height: 200px;
+}
+.online-reputation-management img:hover {
+  opacity: 0.7;
 }
 
 .social-media-marketing img {
   max-height: 200px;
 }
+
+.social-media-marketing img:hover {
+  opacity: 0.7;
+}
+
 /* Max Height defined for Placeholder images End */
 
 .portfolio h2 {
