--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -214,7 +214,7 @@ p {
 .online-reputation-management img {
   max-height: 200px;
 }
-.online-reputation-management img:hover {
+.social-media-marketing img:hover {
   opacity: 0.7;
 }
 
