--- a/assets/css/armystyle.css
+++ b/assets/css/armystyle.css
@@ -15,16 +15,17 @@ body {
     padding: 10px 35px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2d3436;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 .header h1 {
   font-size: 48px;
-  display: inline-block;
 }
 
 .header nav {
   padding-top: 15;
   margin-right: 20px;
-  float: right;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   font-size: 20px;
 }
@@ -34,7 +35,6 @@ body {
 }
 
 .header nav ul li {
-  display: inline-block;
   margin-left: 25px;
 }
 /* Header scetion Ends */
